# autoClipper

./: .dockerignore  .gitignore  Dockerfile  README.md  check.sh  docker-compose.yml  pyproject.toml
funclip/: azure_processor.py  introduction.py  launch.py  videoclipper.py
funclip/llm/: azure_openai_api.py  demo_prompt.py  gemini_api.py
funclip/utils/: argparse_tools.py  subtitle_utils.py  trans_utils.py
